--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!-- Styles -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
-
     <title>Hackathon</title>
   </head>
   <body>
@@ -22,31 +18,43 @@
     <nav>
       <p>Here goes the navbar - possibly invisible</p>
     </nav>
-
     <!-- Django messages -->
-
     <!-- <div class="container">
       <div class="row">
         <div class="col-md-8 offset-md-2">
           {% for message in messages %}
           <div class="alert {{ message.tags }}" id="msg" role="alert">
             {{ message | safe }}
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="alert"
-              aria-label="Close"
-            ></button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
           {% endfor %}
         </div>
       </div>
-    </div> -->
-
+</div> -->
     <main class="flex-shrink-0 light-bg">
+
       {% block content %}
-      <!-- Content Goes here -->
+
+        <!-- Content Goes here -->
       {% endblock content %}
     </main>
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 footer-bg">
+      <p class="m-0 text-center black normal-text">
+
+        {% block copyright %}
+
+          Copyright 2025 Our Team
+        {% endblock copyright %}
+      </p>
+      <p class="m-0 text-center">
+        Follow us:
+        <a href="#" target="_blank" class="link"><i class="fab fa-facebook-square ms-3"></i></a>
+        <a href="#" target="_blank" class="link"><i class="fab fa-instagram-square ms-3"></i></a>
+        <a href="#" target="_blank" class="link"><i class="fab fa-brands fa-linkedin ms-3"></i></a>
+      </p>
+    </footer>
+
+    {% block extras %}{% endblock %}
   </body>
 </html>
