--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,15 @@
 
 {% block content %}
 
-    <div id="contact"></div>
+    <div id="contact">
+        <!-- The create_report view is in the 'reports' app -->
+        <form action="{% url 'create-report' %}" method="post" class="form">
+            {% csrf_token %}
+            {{ report_form.message }}
+            <button type="submit">Report anonymously</button>
+        </form>
+    </div>
+
     <div id="testimonies"></div>
     <div id="assessment"></div>
 {% endblock %}
