Add functionality to save the report details

--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <form action="{% url 'create-report' %}" method="post" class="form">
+        <form action="{% url 'add-report-details' %}" method="post" class="form">
             {% csrf_token %}
             {% for field in report_details_form %}
             <div class="form-group">
@@ -10,6 +10,8 @@
                 {{ field }}
             </div>
             {% endfor %}
+
+
             <button type="submit">Add details to your report</button>
         </form>
     </div>
