--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -1,18 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
-        <form action="{% url 'add-report-details' %}" method="post" class="form">
-            {% csrf_token %}
-            {% for field in report_details_form %}
-            <div class="form-group">
-                {{ field.label_tag }} 
+<br>
+<div class="col-10 offset-1 text-center">
+<h2>Your Message has been submitted.</h2>
+<br>
+<h4>If you are able to provide more information, please fill out as much as you can!</h4>
+</div>
+
+<div class="col">
+  <div class="row">
+    <div class="col-sm-1 col-md-2 col-xl-3"></div>
+    <div class="col-sm-10 col-md-8 col-xl-6">
+      <form
+        action="{% url 'add-report-details' %}"
+        method="post"
+        class="form full-form"
+      >
+        {% csrf_token %} {% for field in report_details_form %}
+        <div class="form-group row">
+            <label class="col-form-label">{{ field.label }}</label>
+            <div class="">
                 {{ field }}
-            </div>
-            {% endfor %}
-
-
-            <button type="submit">Add details to your report</button>
-        </form>
+              </div>
+        </div>
+        {% endfor %}
+        <div class="form-group row">
+          <div class="col-sm-8 offset-sm-4">
+            <button type="submit" class="btn">Add details to your report</button>
+          </div>
+        </div>
+      </form>
     </div>
+    <div class="col-sm-1 col-md-2 col-xl-3"></div>
+  </div>
+</div>
+
 {% endblock %}
