--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,9 +5,10 @@
 {% block content %}
 <div class="header-container">
     <div class="row justify-content-around align-items-center">
-        <div class="col-6 p-5">
-            <h3 class="munsell text-bolder">Empowering Lives, Ending Exploitation</h3>
-            <p class="text-white">Human trafficking and modern slavery affect millions of people worldwide, depriving individuals of their freedom and dignity. Our mission is to combat these injustices through awareness, education, and actionable solutions.</p>
+        <div class="col-6 p-4 background">
+            <h3 class="munsell text-bolder outlined-text">Empowering Lives, Ending Exploitation</h3>
+            <br>
+            <p class="text-white outlined-text">Human trafficking and modern slavery affect millions of people worldwide, depriving individuals of their freedom and dignity. Our mission is to combat these injustices through awareness, education, and actionable solutions.</p>
         </div>
         <div class="col-4 p-sm-0 text-end">
             <div id="contact" class="m-3 ">
@@ -23,7 +24,7 @@
     </div>
 </div>
 
-    
+
 
     <div id="testimonies"></div>
     <div id="assessment"></div>
