--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,23 @@ p {
 /* General styles */
 
 .bg-head {
-    background-color: #DDDBCB !important;
+    background-color: #F5F1E3 !important;
+}
+
+/* Home Page */
+
+.background {
+    border: 1px solid #1B9AAA;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+.outlined-text {
+    text-shadow:
+    -1px -1px 0 #313638,
+     1px -1px 0 #313638,
+    -1px 1px 0 #313638,
+     1px 1px 0 #313638;
 }
 
 /* Testeminies */
