--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="bg-head">
-      <h1 class="munsell pt-5 pb-3 text-center">
+      <h1 class="onyx pt-5 pb-3 text-center">
         Human Trafficing and Slavery Prevention
       </h1>
       <nav>
