Add URLs for Home and Testimonies

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,10 +33,10 @@
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Testimonies</a>
+              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link" href="stories">Testimonies</a>
               <a class="nav-link" href="#">Advices</a>
-              <a class="nav-link">Contact</a>
+              <a class="nav-link">contact</a>
             </div>
           </div>
         </div>
