--- a/reports/templates/reports/workers/view-reports.html
+++ b/reports/templates/reports/workers/view-reports.html
@@ -5,33 +5,16 @@
     {% for report in reports %}
 
         <div class="container">
-            <div>
-                <h2>{{report.date_created}}</h2>
+            <!-- Passes report id to the report detail view -->
+            <a href="{% url 'report-detail' report.id %}">
                 <div>
-                    <p>{{report.message}}</p>
-                </div>
-            </div>
-
-            <!-- Not all reports have report details -->
-            {% if report.details %}
-                <div>
+                    <h2>{{ report.date_created }}</h2>
+                    <h3>Read: {{ report.read }}</h3>
                     <div>
-                        <h3>{{report.details.name}}</h3>
-                        <p>{{report.details.first_line_address}}</p>
-                        <p>{{report.details.second_line_address}}</p>
-                        <p>{{report.details.town_city}}</p>
-                        <p>{{report.details.county}}</p>
-                        <p>{{report.details.postcode}}</p>
-                        <p>{{report.details.country}}</p>
-                        <p>{{report.details.phone_number}}</p>
-                        <p>{{report.details.person_of_trust}}</p>
-                        <p>{{report.details.person_of_trust_phone_number}}</p>
-                        <p>{{report.details.image_video_url}}</p>
+                        <p>{{ report.message }}</p>
                     </div>
                 </div>
-            {% else %}
-                <p>No details available</p>
-            {% endif %}
+            </a>
         </div>
     {% endfor %}
 
