--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -27,7 +27,7 @@
         {% endfor %}
         <div class="form-group row">
           <div class="col-sm-8 offset-sm-4">
-            <button type="submit" class="btn">Add details to your report</button>
+            <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
           </div>
         </div>
       </form>
