--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" href="/">Home</a>
-              <a class="nav-link" href="stories">Testimonies</a>
+              <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
               <a class="nav-link" href="#">Advices</a>
               <a class="nav-link">contact</a>
             </div>
