Rename date_created in report and order reports

--- a/reports/templates/reports/workers/view-reports.html
+++ b/reports/templates/reports/workers/view-reports.html
@@ -10,6 +10,7 @@
                 <div>
                     <h2>{{ report.date_created }}</h2>
                     <h3>Read: {{ report.read }}</h3>
+                    <h3>Actioned: {{ report.actioned }}</h3>
                     <div>
                         <p>{{ report.message }}</p>
                     </div>
