--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -26,8 +26,11 @@
         </div>
         {% endfor %}
         <div class="form-group row">
-          <div class="col-sm-8 offset-sm-4">
+          <div class="col">
             <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
+          </div>
+          <div>
+            <a href="{% url 'home' %}" class="col btn">Back Home</a>
           </div>
         </div>
       </form>
