--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,23 @@ p {
     background-color: #F5F1E3 !important;
 }
 
+/* Buttons */
+
+.btn-edit {
+    color: black !important;
+    background-color: #1B9AAA !important;
+    border-color: #313638 !important;
+    text-decoration: none;
+    width: fit-content;
+}
+
+/* Images */
+
+.image-high {
+    max-height: 50vh;
+    width: auto;
+}
+
 /* Home Page */
 
 .background {
@@ -28,7 +45,7 @@ p {
      1px 1px 0 #313638;
 }
 
-.hide { 
+.hide {
     display: none;
 }
 
