--- a/stories/templates/stories/stories.html
+++ b/stories/templates/stories/stories.html
@@ -1,5 +1,3 @@
-<!-- Needs to be extended from base.html once created  -->
-<!-- This is a PLACEHOLDER template  -->
 
 {% extends "base.html" %} {% load static %} {% block content %}
 
@@ -76,7 +74,7 @@
     {% endfor %}
   </div>
 
-  {% if is_paginated %}
+  <!-- {% if is_paginated %}
 
   <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center mg-top">
@@ -101,6 +99,8 @@
       {% endif %}
     </ul>
   </nav>
-  {% endif %} {% endblock %}
+  {% endif %}  -->
+
+  {% endblock %}
 </div>
 
