--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     <title>Hope Unbound</title>
   </head>
   <body>
+    <div>
     <div class="bg-head">
       <h1 class="onyx pt-5 pb-3 text-center">
         Human Trafficing and Slavery Prevention
@@ -36,13 +37,15 @@
             <div class="navbar-nav">
               <a class="nav-link active" href="/">Home</a>
               <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
+              <a class="nav-link" href="{% url 'advice' %}">About this topic</a>
               <a class="nav-link" href="#">Advices</a>
-              <a class="nav-link">contact</a>
+              <a class="nav-link">Contact</a>
             </div>
           </div>
         </div>
       </nav>
-      
+    </div>
+
       <!-- Django messages -->
       <div class="container">
       <div class="row">
