--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" href="/">Home</a>
               <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
-              <a class="nav-link" href="{% url 'advice' %}">About this topic</a>
-              <a class="nav-link" href="#">Advices</a>
+              <a class="nav-link" href="{% url 'advice' %}">Advices</a>
               <a class="nav-link">Contact</a>
             </div>
           </div>
