--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -3,9 +3,11 @@
 {% block content %}
 <br>
 <div class="col-10 offset-1 text-center">
+    <!-- If creating full report -->
     {% if not report %}
         <h2>Create a new report.</h2>
     {% else %}
+    <!-- Else if adding report details to existing report -->
         <h2>Your Message has been submitted.</h2>
         <br>
         <h4>If you are able to provide more information, please fill out as much as you can!</h4>
@@ -16,9 +18,16 @@
     <div class="row">
         <div class="col-sm-1 col-md-2 col-xl-3"></div>
         <div class="col-sm-10 col-md-8 col-xl-6">
-            <form action="{% url 'add-report-details' %}" method="post" class="form full-form">
+            {% if not report %}
+                <!-- Form for creating a full report -->
+                <form action="{% url 'create-full-report' %}" method="post" class="form full-form">
+            {% else %}
+                <!-- Form for adding details to an existing report -->
+                <form action="{% url 'add-report-details' %}" method="post" class="form full-form">
+            {% endif %}
                 {% csrf_token %} 
                 
+                <!-- If creating full report add report message item -->
                 {% if not report %}
                 <div class="form-group row">
                     <label class="col-form-label">{{ report_message_form.message.label_tag }}</label>
@@ -27,6 +36,7 @@
                     </div>
                 </div>
                 {% endif %}
+                <!-- End report message form item -->
                 
                 {% for field in report_details_form %}
                 <div class="form-group row">
@@ -38,7 +48,12 @@
                 {% endfor %}
                 <div class="form-group row">
                     <div class="col">
-                        <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
+                        <!-- If creating full report -->
+                        {% if not report %}
+                            <button type="submit" class="btn" id="add-details-button">Create report</button>
+                        {% else %}
+                            <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
+                        {% endif %}
                     </div>
                     <div>
                         <a href="{% url 'home' %}" class="col btn">Back Home</a>
