--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -1,68 +1,30 @@
-{% extends 'base.html' %}
+{% extends 'reports/report-base.html' %}
 
-{% block content %}
-<br>
-<div class="col-10 offset-1 text-center">
-    <!-- If creating full report -->
-    {% if not report %}
-        <h2>Create a new report.</h2>
-    {% else %}
-    <!-- Else if adding report details to existing report -->
-        <h2>Your Message has been submitted.</h2>
-        <br>
-        <h4>If you are able to provide more information, please fill out as much as you can!</h4>
-    {% endif %}
-</div>
+{% block report_header %}
+    <h2>Your Message has been submitted.</h2>
+    <br>
+    <h4>If you are able to provide more information, please fill out as much as you can!</h4>
+{% endblock %}
 
-<div class="col">
-    <div class="row">
-        <div class="col-sm-1 col-md-2 col-xl-3"></div>
-        <div class="col-sm-10 col-md-8 col-xl-6">
-            {% if not report %}
-                <!-- Form for creating a full report -->
-                <form action="{% url 'create-full-report' %}" method="post" class="form full-form">
-            {% else %}
-                <!-- Form for adding details to an existing report -->
-                <form action="{% url 'add-report-details' %}" method="post" class="form full-form">
-            {% endif %}
-                {% csrf_token %} 
-                
-                <!-- If creating full report add report message item -->
-                {% if not report %}
-                <div class="form-group row">
-                    <label class="col-form-label">{{ report_message_form.message.label_tag }}</label>
-                    <div>
-                        {{ report_message_form.message }}
-                    </div>
-                </div>
-                {% endif %}
-                <!-- End report message form item -->
-                
-                {% for field in report_details_form %}
-                <div class="form-group row">
-                    <label class="col-form-label">{{ field.label }}</label>
-                    <div class="">
-                        {{ field }}
-                    </div>
-                </div>
-                {% endfor %}
-                <div class="form-group row">
-                    <div class="col">
-                        <!-- If creating full report -->
-                        {% if not report %}
-                            <button type="submit" class="btn" id="add-details-button">Create report</button>
-                        {% else %}
-                            <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
-                        {% endif %}
-                    </div>
-                    <div>
-                        <a href="{% url 'home' %}" class="col btn">Back Home</a>
-                    </div>
-                </div>
-            </form>
+{% block report_form %}
+    <form action="{% url 'add-report-details' %}" method="post" class="form full-form">
+        {% csrf_token %}
+
+        {% for field in report_details_form %}
+        <div class="form-group row">
+            <label class="col-form-label">{{ field.label }}</label>
+            <div class="">
+                {{ field }}
+            </div>
         </div>
-        <div class="col-sm-1 col-md-2 col-xl-3"></div>
-    </div>
-</div>
-
+        {% endfor %}
+        <div class="form-group row">
+            <div class="col">
+                <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
+            </div>
+            <div>
+                <a href="{% url 'home' %}" class="col btn">Back Home</a>
+            </div>
+        </div>
+    </form>
 {% endblock %}
