--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     <div>
-    <div class="bg-head">
-      <h1 class="onyx pt-5 pb-3 text-center">
+    <div class="bg-head bg-logo-icon">
+      <h1 class="onyx pt-5 pb-3 text-center main-title bg-logo-icon">
         Human Trafficing and Slavery Prevention
       </h1>
     </div>
-      <nav class="navbar navbar-expand-sm  bg-dark border-body" data-bs-theme="dark" >
+      <nav class="navbar navbar-expand-sm  bg-dark  border-body" data-bs-theme="dark" >
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
