html: Tweak report details header text

--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -1,9 +1,9 @@
 {% extends 'reports/report-base.html' %}
 
 {% block report_header %}
-    <h2>Your Message has been submitted.</h2>
+    <h2>Your report message has been submitted.</h2>
     <br>
-    <h4>If you are able to provide more information, please fill out as much as you can!</h4>
+    <h4>If you are able to provide more information to the report, please fill out as much as you can!</h4>
 {% endblock %}
 
 {% block report_form %}
