html: Remove 's' from 'advices' in nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" href="/">Home</a>
               <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
-              <a class="nav-link" href="{% url 'advice' %}">Advices</a>
+              <a class="nav-link" href="{% url 'advice' %}">Advice</a>
               <a class="nav-link" href="{% url 'news' %}">News</a>
               <a class="nav-link">contact</a>
 
