--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,3 @@
-
-
 .header-container{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/header_bg.png")!important;
     background-repeat: no-repeat;
@@ -8,4 +6,26 @@
     place-items: center;
     min-height: 70vh;
 
+}
+
+.header-container2{
+    display: grid;
+    place-items: center;
+    min-height: 35vh;
+    max-width: 80vw;
+    margin-left: 10vw;
+}
+
+.grey-bg {
+    background-color: #9c9c9ce3 !important;
+}
+
+.header-container3{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/testemonies_head.jpg")!important;
+    background-repeat: no-repeat;
+    background-size:cover;
+    display: grid;
+    place-items: center;
+    min-height: 70vh;
+    height: fit-content;
 }
