--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,6 +1,8 @@
 /*main tags rules*/
 
-p {
+
+
+h1, h2, h3, p {
     padding: 0;
     margin: 0;
 }
@@ -59,6 +61,7 @@ p {
     border: 1px solid #313638;
     border-radius: 5px;
     background-color: #F5F1E3;
+    padding: 20px;
 }
 
 /* Advice */
