--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,7 +227,25 @@ h1, h2, h3, p {
 }
 
 /* Homepage carousel */
+#story-carousel {
+    background-color: #0dcaf041;
+}
+
 .carousel-item {
-    width: 70%;
-    margin-left: 15%;
+    height: 20em;
+}
+
+.carousel-story-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    width: 60%;
+    margin: auto;
+}
+
+.carousel-arrows {
+    width: 64px;
 }
