Add 'read more' link to story carousel

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -51,6 +51,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
+    <hr class="carousel-seperator">
+
+    <div class="text-center">
+        <a href="{% url 'stories' %}" id="read-more-stories-link">Read more</a>
+    </div> 
 </div>
 
 <div class="header-container3" id="assessment"></div>
