Add and style carousel heading

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,6 +26,7 @@
 </div>
 
 <div id="testimonies">
+    <h2 id="carousel-stories-heading">Survivor stories</h2>
     <div id="story-carousel" class="carousel slide">
         <div class="carousel-inner">
             {% for story in homepage_stories %}
