fix: Opacity glitch where the arrow colour !match

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -256,7 +256,7 @@ h1, h2, h3, p {
     width: 64px;
 }
 
-.carousel-arrows:not(:hover){
+.carousel-control-next:not(:hover), .carousel-control-prev:not(:hover){
     opacity: 0.5;
 }
 
