--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,12 +26,14 @@
 </div>
 
 <div id="testimonies">
-    <h2 id="carousel-stories-heading">Survivor stories</h2>
+  <div class="grey-bg">
+  <div class="header-container3">
+    <h2 id="carousel-stories-heading" class="text-center pt-3 pb-3">Survivor stories</h2>
     <div id="story-carousel" class="carousel slide">
         <div class="carousel-inner">
             {% for story in homepage_stories %}
                 <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <div class="carousel-story-container">
+                    <div class="carousel-story-container white-bg reason carousel-style">
                         <h5>{{ story.title }}</h5>
                         <hr>
                         <p>{{ story.content }}</p>
@@ -52,14 +54,94 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
     <hr class="carousel-seperator">
-
     <div class="text-center">
-        <a href="{% url 'stories' %}" id="read-more-stories-link">Read more</a>
+      <a href="{% url 'stories' %}" class="btn btn-lg btn-info mt-3 mb-3">Click here to see more survivor stories</a>
     </div>
+  </div>
+</div>
+</div>
+<!--
+
+
+      <div class="col pt-3">
+        <div class="card h-100 reason">
+          <div class="text-center pt-2 sign-heading">
+            <h5>Illegal Slavery Survivor:</h5>
+          </div>
+          <br />
+          <div class="border-1">
+            <p class="sign-heading">Miguel</p>
+            <p class="pt-2">
+              Miguel, enslaved in Florida's orange groves, endured threats and
+              exploitation after seeking work to pay for his son's cancer
+              treatment. The Coalition of Immokalee Workers discovered his
+              situation and orchestrated his rescue. Now free, Miguel works on
+              his own terms, enjoys time off, and sends money to his family.
+              Most importantly, his son has recovered and is healthy.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col pt-3">
+        <div class="card h-100 reason">
+          <div class="text-center pt-2 sign-heading">
+            <h5>Sweatshop Worker:</h5>
+          </div>
+          <br />
+          <div class="border-1">
+            <p class="sign-heading">Flor Molina</p>
+            <p class="pt-2">
+              Flor Molina was trafficked from Mexico to a garment factory in Los
+              Angeles, where she faced abuse and 18-hour workdays. After
+              pleading to attend church, she escaped and cooperated with federal
+              authorities investigating the factory. Flor was granted a T visa
+              to remain in the U.S. She has since become an advocate for
+              trafficking survivors, using her voice to represent those who
+              cannot speak for themselves.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col pt-3">
+        <div class="card h-100 reason">
+          <div class="text-center pt-2 sign-heading">
+            <h5>Trafficking Victim:</h5>
+          </div>
+          <br />
+          <div class="border-1">
+            <p class="sign-heading">Evelyn Chumbow</p>
+            <p class="pt-2">
+              Sold by her uncle in Cameroon, Evelyn was trafficked to Maryland
+              as a child and forced into domestic servitude. She endured
+              beatings, starvation, and constant degradation. At 17, Evelyn ran
+              away and found help through a priest who contacted the police.
+              Today, Evelyn is a survivor activist and board member of The Human
+              Trafficking Legal Center, working to combat modern slavery and
+              sharing her story to raise awareness and inspire change.
+            </p>
+          </div>
+        </div>
+      </div>
+ -->
+
+<div id="advice" class="grey-bg">
+  <div class="header-container3 pb-5 pt-5">
+    <a href="{% url 'advice' %}" class="links">
+    <div class="reason white-bg">
+    <h3 class="text-center">Recognizing Signs</h3>
+    <br>
+    <p>Human trafficking and modern slavery are global issues affecting millions. Recognizing potential victims is crucial. Key signs include restricted movement, physical abuse, lack of personal documents, fearful behavior, excessive work hours, and poor living conditions. If you suspect someone is being trafficked or enslaved, it's important to act.</p>
+    <br>
+    <div class="btn-placement">
+    <p class="btn btn-lg btn-info mb-3">Click to learn more</p>
+  </div>
+    </a>
+    </div>
+  </div>
 </div>
 
-<div class="header-container3" id="assessment"></div>
+
+<div class="header-container4" id="assessment"></div>
 {% endblock %}
 
