finlized signs on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -131,7 +131,7 @@
     <div class="reason white-bg">
     <h3 class="text-center">Recognizing Signs</h3>
     <br>
-    <p>Human trafficking and modern slavery are global issues affecting millions. Recognizing potential victims is crucial. Key signs include restricted movement, physical abuse, lack of personal documents, fearful behavior, excessive work hours, and poor living conditions. If you suspect someone is being trafficked or enslaved, it's important to act.</p>
+    <p>Human trafficking and modern slavery are global issues affecting millions. Recognizing potential victims is crucial. Key signs include restricted movement, physical abuse, lack of personal documents, fearful behavior, excessive work hours, and poor living conditions. If you suspect someone is being trafficked or enslaved, it's important to act. Click here to get the full guide on how to recognize if you or someone you know needs help.</p>
     <br>
     <div class="btn-placement">
     <p class="btn btn-lg btn-info mb-3">Click to learn more</p>
