--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,14 @@ h1, h2, h3, p {
     width: auto;
 }
 
+@media (max-width:480px){
+    .image-high {
+        max-height: 50vh;
+        width: auto;
+    }
+    
+}
+
 /* Home Page */
 
 .main-title{
